--- a/lib/tests/tests.html
+++ b/lib/tests/tests.html
@@ -10,7 +10,9 @@
 <div id="qunit"></div>
 <div id="qunit-fixture"></div>
 <script src="https://code.jquery.com/qunit/qunit-2.4.0.js"></script>
-<script src="ultimateBattleLib.js"></script>
-<script src="tests.js"></script>
+<script src="../ultimateBattleLib.js"></script>
+<script src="collisionTests.js"></script>
+<script src="utilsTests.js"></script>
+
 </body>
 </html>
