--- a/client/index.html
+++ b/client/index.html
@@ -9,6 +9,8 @@
     <script src="pixi.js"></script>
 </head>
 <body>
+<script type="text/javascript" src="..\lib\ultimateBattleLib.js"></script>
+<script type="text/javascript" src="renderer.js"></script>
 <script type="text/javascript" src="main.js"></script>
 
 </body>
